fixed pages paths

--- a/docs/src/content/docs/en/expressions.mdx
+++ b/docs/src/content/docs/en/expressions.mdx
@@ -7,10 +7,8 @@ order: 10
 hideFeedback: true
 products:
 - MapLibre Style Specification
-prependJs:
-    - "import ExpressionReference from '../../components/style-spec/expression-reference';"
-
 ---
+import ExpressionReference from '../../../components/style-spec/specs/expression-reference.jsx'
 
 The value for any [layout property](/maplibre-gl-js-docs/style-spec/layers/#layout-property), [paint property](/maplibre-gl-js-docs/style-spec/layers/#paint-property), or [filter](/maplibre-gl-js-docs/style-spec/layers/#filter) may be specified as an _expression_. An expression defines a formula for computing the value of the property using the _operators_ described below. The set of expression operators provided by MapLibre GL includes:
 
@@ -44,10 +42,8 @@ A _data expression_ is any expression that access feature data -- that is, any e
 }
 ```
 
-<!--copyeditor ignore in-terms-of-->
 This example uses the [`get`](#get) operator to get the `temperature` value of each feature. That value is used to compute arguments to the [`rgb`](#rgb) operator, defining a color in terms of its red, green, and blue components.
 
-<!--copyeditor ignore however-->
 Data expressions are allowed as the value of the [`filter`](/maplibre-gl-js-docs/style-spec/layers/#filter) property, and as values for most paint and layout properties. However, some paint and layout properties do not yet support data expressions. The level of support is indicated by the "data-driven styling" row of the "SDK Support" table for each property. Data expressions with the [`feature-state`](#feature-state) operator are allowed only on paint properties.
 
 
@@ -130,14 +126,9 @@ The input arguments to expressions, and their result values, use the same set of
 
 When working with feature data, the type of a feature property value is typically not known ahead of time by the SDK. To preserve type safety, when evaluating a data expression, the SDK will check that the property value is appropriate for the context. For example, if you use the expression `["get", "feature-color"]` for the [`circle-color`](#paint-circle-circle-color) property, the SDK will verify that the `feature-color` value of each feature is a string identifying a valid [color](#types-color). If this check fails, an error will be indicated in an SDK-specific way (typically a log message), and the default value for the property will be used instead.
 
-<!--copyeditor disable however-->
-<!--copyeditor disable clear-->
-<!--copyeditor ignore indicate-->
-In most cases, this verification will occur automatically wherever it is needed. However, in certain situations, the SDK may be unable to automatically determine the expected result type of a data expression from surrounding context. For example, it is not clear whether the expression `["&lt;", ["get", "a"], ["get", "b"]]` is attempting to compare strings or numbers. In situations like this, you can use one of the _type assertion_ expression operators to indicate the expected type of a data expression: `["&lt;", ["number", ["get", "a"]], ["number", ["get", "b"]]]`. A type assertion checks that the feature data matches the expected type of the data expression. If this check fails, it produces an error and causes the whole expression to fall back to the default value for the property being defined. The assertion operators are [`array`](#types-array), [`boolean`](#types-boolean), [`number`](#types-number), and [`string`](#types-string).
-<!--copyeditor enable however-->
-<!--copyeditor enable clear-->
 
-<!--copyeditor ignore perform-->
+In most cases, this verification will occur automatically wherever it is needed. However, in certain situations, the SDK may be unable to automatically determine the expected result type of a data expression from surrounding context. For example, it is not clear whether the expression `["&lt;", ["get", "a"], ["get", "b"]]` is attempting to compare strings or numbers. In situations like this, you can use one of the _type assertion_ expression operators to indicate the expected type of a data expression: `["&lt;", ["number", ["get", "a"]], ["number", ["get", "b"]]]`. A type assertion checks that the feature data matches the expected type of the data expression. If this check fails, it produces an error and causes the whole expression to fall back to the default value for the property being defined. The assertion operators are [`array`](#types-array), [`boolean`](#types-boolean), [`number`](#types-number), and [`string`](#types-string).
+
 Expressions perform only one kind of implicit type conversion: a data expression used in a context where a [color](#types-color) is expected will convert a string representation of a color to a color value. In all other cases, if you want to convert between types, you must use one of the _type conversion_ expression operators: [`to-boolean`](#types-to-boolean), [`to-number`](#types-to-number), [`to-string`](#types-to-string), or [`to-color`](#types-to-color). For example, if you have a feature property that stores numeric values in string format, and you want to use those values as numbers rather than strings, you can use an expression such as `["to-number", ["get", "property-name"]]`.
 
 If an expression accepts an array argument and the user supplies an array literal, that array _must_ be wrapped in a `literal` expression (see the examples below). When GL-JS encounters an array in a style-spec property value, it will assume that the array is an expression and try to parse it; the library has no way to distinguish between an expression which failed validation and an array literal unless the developer makes this distinction explicit with the `literal` operator. The `literal` operator is not necessary if the array is returned from a sub-expression, e.g. `["in", 1, ["get", "myArrayProp"]]`.
@@ -156,7 +147,6 @@ If an expression accepts an array argument and the user supplies an array litera
 
 # Expression reference
 
-<!-- This h1 is an exception as the following headings need to be an h2 for scrollspy to work on the sidebar. See site.css for override styles for these headings. -->
 
 
 ## Types
@@ -165,46 +155,46 @@ The expressions in this section are for testing for and converting between diffe
 
 Often, such tests and conversions are unnecessary, but they may be necessary in some expressions where the type of a certain sub-expression is ambiguous. They can also be useful in cases where your feature data has inconsistent types; for example, you could use `to-number` to make sure that values like `"1.5"` (instead of `1.5`) are treated as numeric values.
 
-{{<ExpressionReference group='Types' />}}
+<ExpressionReference group='Types' />   
 
 ## Feature data
 
-{{<ExpressionReference group='Feature data' />}}
+<ExpressionReference group='Feature data' />    
 
 ## Lookup
 
-{{<ExpressionReference group='Lookup' />}}
+<ExpressionReference group='Lookup' />  
 
 ## Decision
 
 The expressions in this section can be used to add conditional logic to your styles. For example, the [`'case'`](#case)  expression provides "if/then/else" logic, and [`'match'`](#match) allows you to map specific values of an input expression to different output expressions.
 
-{{<ExpressionReference group='Decision' />}}
+<ExpressionReference group='Decision' />    
 
 ## Ramps, scales, curves
 
-{{<ExpressionReference group='Ramps, scales, curves' />}}
+<ExpressionReference group='Ramps, scales, curves' />   
 
 ## Variable binding
 
-{{<ExpressionReference group='Variable binding' />}}
+<ExpressionReference group='Variable binding' />    
 
 ## String
 
-{{<ExpressionReference group='String' />}}
+<ExpressionReference group='String' />  
 
 ## Color
 
-{{<ExpressionReference group='Color' />}}
+<ExpressionReference group='Color' />   
 
 ## Math
 
-{{<ExpressionReference group='Math' />}}
+<ExpressionReference group='Math' />    
 
 ## Zoom
 
-{{<ExpressionReference group='Zoom' />}}
+<ExpressionReference group='Zoom' />    
 
 ## Heatmap
 
-{{<ExpressionReference group='Heatmap' />}}
+<ExpressionReference group='Heatmap' /> 
