--- a/docs/src/content/docs/en/root.mdx
+++ b/docs/src/content/docs/en/root.mdx
@@ -7,16 +7,19 @@ order: 2
 hideFeedback: true
 products:
 - MapLibre Style Specification
-prependJs:
-    - "import Items from '../../components/style-spec/items';"
-    - "import ref from '@maplibre/maplibre-gl-style-spec/tsc/src/reference/latest';"
+
 ---
+import Items from '../../../components/style-spec/specs/items.jsx'
+import ref from '../../../reference/latest.ts'
+
 
 Root level properties of a MapLibre style specify the map's layers, tile sources and other resources, and default values for the initial camera position when not specified elsewhere.
 
+
+
 ```json
 {
-    "version": {{ref.$version}},
+    "version": {version},
     "name": "Mapbox Streets",
     "sprite": "mapbox://sprites/mapbox/streets-v{{ref.$version}}",
     "glyphs": "mapbox://fonts/mapbox/{fontstack}/{range}.pbf",
@@ -25,11 +28,10 @@ Root level properties of a MapLibre style specify the map's layers, tile sources
 }
 ```
 
-<!--
-START GENERATED CONTENT:
+
+{/* START GENERATED CONTENT:
 Content in this section is generated directly using the MapLibre Style
 Specification. To update any content displayed in this section, make edits to:
-https://github.com/maplibre/maplibre-gl-js/blob/main/src/style-spec/reference/v8.json.
--->
-{{<Items headingLevel='2' entry={ref.$root} />}}
-<!-- END GENERATED CONTENT -->
+https://github.com/maplibre/maplibre-gl-js/blob/main/src/style-spec/reference/v8.json. */}
+<Items headingLevel='2' entry={ref.$root} />
+{/* END GENERATED CONTENT */}
