--- a/docs/src/content/docs/en/transition.mdx
+++ b/docs/src/content/docs/en/transition.mdx
@@ -7,25 +7,23 @@ order: 7
 hideFeedback: true
 products:
 - MapLibre Style Specification
-prependJs:
-    - "import Items from '../../components/style-spec/items';"
-    - "import ref from '@maplibre/maplibre-gl-style-spec/tsc/src/reference/latest';"
-    - "import Icon from '@mapbox/mr-ui/icon';"
 ---
+import Items from '../../../components/style-spec/specs/items.jsx'
+import ref from '../../../reference/latest.ts'
 
 A `transition` property controls timing for the interpolation between a transitionable style property's previous value and new value. A style's <a href="#root-transition" title="link to root-transition">root `transition`</a> property provides global transition defaults for that style.
 
 ```json
-"transition": {{JSON.stringify(
+"transition": {JSON.stringify(
     ref.$root.transition.example,
     null,
     2
-)}}
+)}
 ```
-Any transitionable layer property, marked by {{<Icon
+{/* Any transitionable layer property, marked by {{<Icon
         name="opacity"
         inline={true}
-    />}}, may also have its own `*-transition` property that defines specific transition timing for that layer property, overriding the global `transition` values.
+    />}}, may also have its own `*-transition` property that defines specific transition timing for that layer property, overriding the global `transition` values. */}
 
 ```json
 "fill-opacity-transition": {{JSON.stringify(
@@ -34,11 +32,11 @@ Any transitionable layer property, marked by {{<Icon
     2
 )}}
 ```
-<!--
-START GENERATED CONTENT:
+
+{/* START GENERATED CONTENT:
 Content in this section is generated directly using the MapLibre Style
 Specification. To update any content displayed in this section, make edits to:
-https://github.com/maplibre/maplibre-gl-js/blob/main/src/style-spec/reference/v8.json.
--->
-{{<Items headingLevel='2' entry={ref.transition} />}}
-<!-- END GENERATED CONTENT -->
+https://github.com/maplibre/maplibre-gl-js/blob/main/src/style-spec/reference/v8.json. */}
+
+<Items headingLevel='2' entry={ref.transition} />
+{/* END GENERATED CONTENT */}
