--- a/docs/src/content/docs/en/root.mdx
+++ b/docs/src/content/docs/en/root.mdx
@@ -11,22 +11,15 @@ products:
 ---
 import Items from '../../../components/style-spec/specs/items.jsx'
 import ref from '../../../reference/latest.ts'
+import RootPrism from '../highligting/root1.jsx'
 
 
 Root level properties of a MapLibre style specify the map's layers, tile sources and other resources, and default values for the initial camera position when not specified elsewhere.
 
 
 
-```json
-{
-    "version": {version},
-    "name": "Mapbox Streets",
-    "sprite": "mapbox://sprites/mapbox/streets-v{{ref.$version}}",
-    "glyphs": "mapbox://fonts/mapbox/{fontstack}/{range}.pbf",
-    "sources": {...},
-    "layers": [...]
-}
-```
+<RootPrism />
+
 
 
 {/* START GENERATED CONTENT:
